# trading-bot

./: .gitignore  README.md  config.example.json  crypto.example.json  pyproject.toml  run_fx_edge_lab.py  setup.bat
data/: sample_basis_ticks.csv  sample_market_data.csv
src/fx_edge_lab/: __init__.py  basis.py  cli.py  crypto_analysis.py  crypto_dashboard.py  crypto_engine.py  crypto_insights.py  crypto_models.py  crypto_pnl.py  crypto_service.py  crypto_settings.py  crypto_storage.py  crypto_strategy_lab.py  data_io.py  dxy.py  engine.py  models.py  notifiers.py  pairs.py  replay.py  service.py  settings.py  signals.py  storage.py  yahoo.py
src/fx_edge_lab/connectors/: __init__.py  binance_public.py  bybit_public.py  ib.py  mt5.py  polygon.py
tests/: test_basis.py  test_crypto_engine.py  test_crypto_settings.py  test_crypto_strategy_lab.py  test_dxy.py  test_engine.py  test_replay.py
